--- a/src/css/main.css
+++ b/src/css/main.css
@@ -476,8 +476,8 @@ html {
 }
 
 .contact-form__contact-form-inside-wrapper {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .contact-form-inside-wrapper__contact-left {
@@ -505,6 +505,10 @@ html {
   background-color: var(--color-input-background);
 }
 
+.contact-form-group__input--no-padding {
+  margin-bottom: 0;
+}
+
 .contact-form-group__textarea {
   width: 100%;
   padding: 1.6rem 2rem;
@@ -527,15 +531,17 @@ html {
   }
 
   .contact-form__contact-form-inside-wrapper {
-    flex-direction: row;
-  }
-
-  .contact-form-inside-wrapper__contact-left {
-    width: 50%;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 3rem;
   }
 
   .contact-form-inside-wrapper__contact-right {
-    width: 50%;
+    height: 100%;
+  }
+
+  .contact-us__contact-form-group--height-100 {
+    height: 100%;
+    overflow: hidden;
   }
 
   .contact-form-group__textarea {
