--- a/src/css/pages/ContactUs.scss
+++ b/src/css/pages/ContactUs.scss
@@ -20,8 +20,8 @@
 }
 
 .contact-form__contact-form-inside-wrapper {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .contact-form-inside-wrapper__contact-left {
@@ -49,6 +49,10 @@
     background-color: var(--color-input-background);
 }
 
+.contact-form-group__input--no-padding {
+    margin-bottom: 0;
+}
+
 .contact-form-group__textarea {
     width: 100%;
     padding: 1.6rem 2rem;
@@ -72,15 +76,22 @@
     }
 
     .contact-form__contact-form-inside-wrapper {
-        flex-direction: row;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 3rem;
     }
 
     .contact-form-inside-wrapper__contact-left {
-        width: 50%;
+        // width: 50%;
     }
     
     .contact-form-inside-wrapper__contact-right {
-        width: 50%;
+        // width: 50%;
+        height: 100%;
+    }
+
+    .contact-us__contact-form-group--height-100 {
+        height: 100%;
+        overflow: hidden;
     }
 
     .contact-form-group__textarea {
