Work on contact form styling.

--- a/src/css/pages/ContactUs.css
+++ b/src/css/pages/ContactUs.css
@@ -37,7 +37,12 @@
 }
 
 .contact-us__header--form {
+  margin-bottom: 2rem;
   color: var(--color-white);
+}
+
+.contact-form__label {
+  font-size: var(--font-1-6);
 }
 
 .contact-form-group__input {
