--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 a {
-  color: inherit; }
+  color: inherit;
+}
 
 /* Original reset file */
 *,
@@ -9,13 +10,15 @@ a {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -o-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* Fix the bug that causes body go out of screen border and because of that horizontal scrolling. */
 /* https://stackoverflow.com/a/42798283/5184474 */
 html,
 body {
-  position: relative; }
+  position: relative;
+}
 
 /* http://meyerweb.com/eric/tools/css/reset/
     v2.0 | 20110126
@@ -107,7 +110,8 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /* HTML5 display-role reset for older browsers */
 article,
@@ -121,50 +125,62 @@ hgroup,
 menu,
 nav,
 section {
-  display: block; }
+  display: block;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 ol,
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote,
 q {
-  quotes: none; }
+  quotes: none;
+}
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none; }
+  content: "";
+  content: none;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 body, p {
   margin: 0;
-  font-family: Lato; }
+  font-family: Lato;
+}
 
 .img-fluid {
   width: 100%;
-  height: auto; }
+  height: auto;
+}
 
 .img-fluid--no-width {
   height: auto;
-  max-height: -webkit-fill-available; }
+  max-height: -webkit-fill-available;
+}
 
 .pointer {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .rounded {
-  border-radius: 6px; }
+  border-radius: 6px;
+}
 
 :root {
   --color-description: #9E9E9E;
@@ -185,7 +201,7 @@ body, p {
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1-3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -194,48 +210,58 @@ body, p {
   --font-3-2: 3.2rem;
   --font-4-4: 4.4rem;
   --line-120: 120%;
-  --line-150: 150%; }
+  --line-150: 150%;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .mb-16 {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 .mb-45 {
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+}
 
 .home {
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .home__home-content {
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .home-content__outside-welcome-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+}
 
 .home-content__welcome-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .welcome-container__general-info {
   padding: 16px;
   font-size: var(--font-22);
-  line-height: var(--line-150); }
+  line-height: var(--line-150);
+}
 
 .welcome-content-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .welcome-content-container__content {
   display: flex;
@@ -245,50 +271,62 @@ html {
   font-size: var(--font-22);
   line-height: var(--line-150);
   border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px; }
+  border-bottom-left-radius: 6px;
+}
 
 .welcome-content-container__header {
   font-size: var(--font-3-2);
-  color: var(--color-white); }
+  color: var(--color-white);
+}
 
 .welcome-content-container__wheel-chair-transfer-text {
   margin-top: 40px;
   font-size: var(--font-2-2);
-  line-height: var(--line-150); }
+  line-height: var(--line-150);
+}
 
 .welcome-content-container__prices {
   font-size: var(--font-2-2);
   line-height: var(--line-150);
-  color: var(--color-white); }
+  color: var(--color-white);
+}
 
 .welcome-content-container__prices--black {
-  color: var(--color-black); }
+  color: var(--color-black);
+}
 
 .welcome-content-container__reduced-prices {
   font-size: var(--font-1-3);
-  margin-top: 2rem; }
+  margin-top: 2rem;
+}
 
 @media only screen and (min-width: 1024px) {
   .home-content__welcome-container {
     width: 67%;
     max-width: 1280px;
     padding-top: 14rem;
-    padding-bottom: 8rem; }
+    padding-bottom: 8rem;
+  }
 
   .welcome-container__general-info {
     padding: 0;
     margin-bottom: 6rem;
-    font-size: var(--font-2-2); }
+    font-size: var(--font-2-2);
+  }
 
   .welcome-content-container {
     width: 100%;
-    flex-direction: row; }
+    flex-direction: row;
+  }
 
   .welcome-content-container__content {
-    width: 50%; }
+    width: 50%;
+  }
 
   .welcome-content-container__map-container {
-    width: 50%; } }
+    width: 50%;
+  }
+}
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
@@ -308,7 +346,7 @@ html {
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1-3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -317,139 +355,177 @@ html {
   --font-3-2: 3.2rem;
   --font-4-4: 4.4rem;
   --line-120: 120%;
-  --line-150: 150%; }
+  --line-150: 150%;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .mb-16 {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 .mb-45 {
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+}
 
 .about-us {
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .about-us__description-container {
-  width: 100%; }
+  width: 100%;
+}
 
 .about-us__header {
-  font-size: var(--font-2-6); }
+  font-size: var(--font-2-6);
+}
 
 .about-us__base-text {
-  font-size: var(--font-1-6); }
+  font-size: var(--font-1-6);
+  line-height: var(--line-150);
+  margin-top: 1.1rem;
+}
 
 .about-us__services {
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .about-us-services__services-container {
   display: grid;
-  grid-template-columns: 1fr; }
+  grid-template-columns: 1fr;
+  margin-top: 2rem;
+}
 
 .services-container__service-header {
   font-size: var(--font-2-2);
-  text-align: center; }
+  line-height: var(--line-150);
+  text-align: center;
+  margin-top: 1.5rem;
+}
 
 .about-us__fleet {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .about-us-fleet__description {
-  width: 100%; }
+  width: 100%;
+}
 
 .about-us-fleet_car-container {
   width: 100%;
-  background-color: var(--color-blue); }
+  background-color: var(--color-blue);
+}
 
 @media only screen and (min-width: 1024px) {
   .about-us__description-container {
     width: 67%;
     max-width: 1280px;
     padding-top: 20rem;
-    padding-bottom: 80px; }
+    padding-bottom: 80px;
+  }
 
   .about-us__services {
     width: 67%;
-    max-width: 1280px; }
+    max-width: 1280px;
+  }
 
   .about-us-services__services-container {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 3rem; }
+    grid-gap: 3rem;
+  }
 
   .about-us__fleet {
     width: 67%;
     max-width: 1280px;
     flex-direction: row;
     padding-top: 80px;
-    padding-bottom: 80px; }
+    padding-bottom: 80px;
+  }
 
   .about-us-fleet__description {
-    width: 50%; }
+    width: 50%;
+  }
 
   .about-us-fleet_car-container {
-    width: 50%; } }
+    width: 50%;
+  }
+}
 .reservation {
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .contact-us {
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .contact-us__contact-us-content {
-  width: 100%; }
+  width: 100%;
+}
 
 .contact-us__header {
   font-size: var(--font-2-6);
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+}
 
 .contact-us__info {
   line-height: var(--line-150);
-  font-size: var(--font-2-6); }
+  font-size: var(--font-2-6);
+}
 
 .contact-us__info-header {
-  color: #9E9E9E; }
+  color: #9E9E9E;
+}
 
 .contact-us__contact-form {
   margin-top: 2rem;
   padding: 2rem;
-  background-color: var(--color-blue); }
+  background-color: var(--color-blue);
+}
 
 .contact-form__contact-form-inside-wrapper {
   display: grid;
-  grid-template-columns: 1fr; }
+  grid-template-columns: 1fr;
+}
 
 .contact-form-inside-wrapper__contact-left {
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .contact-form-inside-wrapper__contact-right {
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .contact-us__header--form {
   margin-bottom: 2rem;
-  color: var(--color-white); }
+  color: var(--color-white);
+}
 
 .contact-form__label {
   display: inline-block;
   margin-bottom: 1rem;
-  font-size: var(--font-1-6); }
+  font-size: var(--font-1-6);
+}
 
 .contact-form-group__input {
   width: 100%;
@@ -457,10 +533,12 @@ html {
   margin-bottom: 1rem;
   border: 1px solid var(--color-input-border);
   font-size: var(--font-1-6);
-  background-color: var(--color-input-background); }
+  background-color: var(--color-input-background);
+}
 
 .contact-form-group__input--no-padding {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 .contact-form-group__textarea {
   width: 100%;
@@ -468,42 +546,52 @@ html {
   margin-bottom: 1rem;
   border: 1px solid var(--color-input-border);
   font-size: var(--font-1-6);
-  background-color: var(--color-input-background); }
+  background-color: var(--color-input-background);
+}
 
 .contact-form-group__contact-submit-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px;
-  background-color: var(--color-red); }
+  background-color: var(--color-red);
+}
 
 .contact-submit-btn__text {
   font-size: var(--font-2-6);
-  color: var(--color-white); }
+  color: var(--color-white);
+}
 
 @media only screen and (min-width: 1024px) {
   .contact-us__contact-us-content {
     width: 67%;
     max-width: 1280px;
     padding-top: 20rem;
-    padding-bottom: 80px; }
+    padding-bottom: 80px;
+  }
 
   .contact-us__contact-form {
-    padding: 4rem; }
+    padding: 4rem;
+  }
 
   .contact-form__contact-form-inside-wrapper {
     grid-template-columns: 1fr 1fr;
-    grid-gap: 3rem; }
+    grid-gap: 3rem;
+  }
 
   .contact-form-inside-wrapper__contact-right {
-    height: 100%; }
+    height: 100%;
+  }
 
   .contact-us__contact-form-group--height-100 {
     height: 100%;
-    overflow: hidden; }
+    overflow: hidden;
+  }
 
   .contact-form-group__textarea {
-    height: 100%; } }
+    height: 100%;
+  }
+}
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
@@ -523,7 +611,7 @@ html {
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1-3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -532,34 +620,42 @@ html {
   --font-3-2: 3.2rem;
   --font-4-4: 4.4rem;
   --line-120: 120%;
-  --line-150: 150%; }
+  --line-150: 150%;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .mb-16 {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 .mb-45 {
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+}
 
 .navbar {
   width: 100%;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .navbar-mobile {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 16px; }
+  padding: 16px;
+}
 
 .navbar-mobile__logo-container {
-  height: 45px; }
+  height: 45px;
+}
 
 .navbar-mobile__menu {
-  display: none; }
+  display: none;
+}
 
 .navbar-desktop {
   display: none;
@@ -568,15 +664,18 @@ html {
   grid-gap: 10rem;
   max-width: 1280px;
   padding-top: 1.6rem;
-  padding-bottom: 1.6rem; }
+  padding-bottom: 1.6rem;
+}
 
 .navbar-desktop__navbar-desktop-left {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+}
 
 .navbar-desktop__logo-container {
-  height: 3rem; }
+  height: 3rem;
+}
 
 .call-btn {
   display: flex;
@@ -584,44 +683,57 @@ html {
   align-items: center;
   background-color: var(--color-red);
   padding: 8px 16px;
-  margin-left: 16px; }
+  margin-left: 16px;
+}
 
 .call-btn--mobile {
-  display: none; }
+  display: none;
+}
 
 .call-btn__phone-img-container {
-  height: 1.6rem; }
+  height: 1.6rem;
+}
 
 .call-btn__text {
   font-size: var(--font-1-6);
   font-weight: bold;
   color: var(--color-white);
   margin-left: 10px;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 .navbar__navbar-links {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
 .navbar-links__navbar-link {
   font-size: var(--font-1-6);
   color: var(--color-button);
   text-decoration: underline;
   padding-right: 16px;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 @media only screen and (min-width: 768px) {
   .call-btn--mobile {
-    display: block; } }
+    display: block;
+  }
+}
 @media only screen and (min-width: 1024px) {
   .navbar-mobile {
-    display: none; }
+    display: none;
+  }
 
   .navbar-desktop {
-    display: grid; } }
+    display: grid;
+  }
+}
 @media only screen and (min-width: 1280px) {
   .navbar-links__navbar-link {
-    padding-right: 40px; } }
+    padding-right: 40px;
+  }
+}
 .top {
   height: 265px;
   width: 100%;
@@ -630,20 +742,25 @@ html {
   /* Center the image */
   background-repeat: no-repeat;
   /* Do not repeat the image */
-  background-size: cover; }
+  background-size: cover;
+}
 
 @media only screen and (min-width: 768px) {
   .top {
     height: 60vh;
-    background-image: url("../images/bg.jpg"); } }
+    background-image: url("../images/bg.jpg");
+  }
+}
 .top__floating-container {
   display: grid;
   grid-template-columns: 1fr;
   width: 100%;
-  max-width: 1280px; }
+  max-width: 1280px;
+}
 
 .top__car-photo-container {
-  display: none; }
+  display: none;
+}
 
 @media only screen and (min-width: 1024px) {
   .top__floating-container {
@@ -651,11 +768,14 @@ html {
     top: 25vh;
     grid-template-columns: 1fr 1.5fr;
     grid-gap: 50px;
-    width: 67%; }
+    width: 67%;
+  }
 
   .top__car-photo-container {
     display: block;
-    width: 100%; } }
+    width: 100%;
+  }
+}
 .reservation-form {
   display: flex;
   flex-direction: column;
@@ -663,7 +783,8 @@ html {
   position: relative;
   padding: 16px;
   background-color: var(--color-white);
-  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
+}
 
 .reservation-form__triangle {
   display: none;
@@ -676,7 +797,8 @@ html {
   border-bottom: 25px solid transparent;
   border-right: 25px solid transparent;
   border-left: 35px solid var(--color-white);
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 .reservation-form__input {
   width: 100%;
@@ -684,57 +806,71 @@ html {
   margin-bottom: 1rem;
   border: 1px solid var(--color-input-border);
   font-size: var(--font-1-6);
-  background-color: var(--color-input-background); }
+  background-color: var(--color-input-background);
+}
 
 .reservation-form__submit-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px;
-  background-color: var(--color-red); }
+  background-color: var(--color-red);
+}
 
 .reservation-form__submit-text {
   color: var(--color-white);
-  font-size: var(--font-1-6); }
+  font-size: var(--font-1-6);
+}
 
 @media only screen and (min-width: 400px) {
   .reservation-form__submit-btn {
     padding: 1.6rem 2rem;
-    margin-top: 2rem; }
+    margin-top: 2rem;
+  }
 
   .reservation-form__submit-text {
     font-size: var(--font-2);
-    white-space: nowrap; } }
+    white-space: nowrap;
+  }
+}
 @media only screen and (min-width: 768px) {
   .reservation-form {
     width: 100%;
     max-width: 534px;
-    padding: 2.5rem; }
+    padding: 2.5rem;
+  }
 
   .reservation-form__triangle {
-    display: block; } }
+    display: block;
+  }
+}
 .home-content__outside-mission-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: var(--color-light-blue); }
+  background-color: var(--color-light-blue);
+}
 
 .home-content__mission-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .mission-container__mission-photo {
-  width: 100%; }
+  width: 100%;
+}
 
 .mission-container__mission-content {
   width: 100%;
-  padding: 16px; }
+  padding: 16px;
+}
 
 .mission-content__text {
   font-size: var(--font-1-8);
-  line-height: var(--line-150); }
+  line-height: var(--line-150);
+}
 
 @media only screen and (min-width: 1024px) {
   .home-content__mission-container {
@@ -742,15 +878,19 @@ html {
     max-width: 1280px;
     padding-top: 80px;
     padding-bottom: 80px;
-    flex-direction: row; }
+    flex-direction: row;
+  }
 
   .mission-container__mission-photo {
-    width: 50%; }
+    width: 50%;
+  }
 
   .mission-container__mission-content {
     width: 50%;
     padding: 0;
-    margin-left: 3rem; } }
+    margin-left: 3rem;
+  }
+}
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
@@ -770,7 +910,7 @@ html {
   --font-32: 32px;
   --font-44: 44px;
   --font-1: 1rem;
-  --font-1-3: -2rem;
+  --font-1-3: 1-3rem;
   --font-1-6: 1.6rem;
   --font-1-8: 1.8rem;
   --font-2: 2rem;
@@ -779,16 +919,20 @@ html {
   --font-3-2: 3.2rem;
   --font-4-4: 4.4rem;
   --line-120: 120%;
-  --line-150: 150%; }
+  --line-150: 150%;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .mb-16 {
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 .mb-45 {
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+}
 
 .footer {
   display: grid;
@@ -797,53 +941,67 @@ html {
   background-color: var(--color-footer);
   padding: 16px;
   color: var(--color-white);
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+}
 
 .footer__content {
   display: grid;
-  max-width: 1440px; }
+  max-width: 1440px;
+}
 
 .footer-logos {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .footer__payment-logo-container {
   width: 80px;
-  margin: 8px 35px; }
+  margin: 8px 35px;
+}
 
 .footer-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  line-height: var(--line-120); }
+  line-height: var(--line-120);
+}
 
 .footer-info__desktop {
-  display: none; }
+  display: none;
+}
 
 .footer-info__terms {
-  margin-top: 16px; }
+  margin-top: 16px;
+}
 
 @media only screen and (min-width: 768px) {
   .footer {
-    padding: 30px 0; }
+    padding: 30px 0;
+  }
 
   .footer__content {
     width: 80%;
     max-width: 1280px;
-    grid-template-columns: 4fr 1fr; }
+    grid-template-columns: 4fr 1fr;
+  }
 
   .footer-info__mobile {
-    display: none; }
+    display: none;
+  }
 
   .footer-info__desktop {
-    display: block; }
+    display: block;
+  }
 
   .footer-info {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2; }
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
 
   .footer-logos {
-    grid-column: 2 / 3; } }
+    grid-column: 2/3;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
