--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -59,6 +59,8 @@ html {
 
 .about-us__base-text {
   font-size: var(--font-1-6);
+  line-height: var(--line-150);
+  margin-top: 1.1rem;
 }
 
 .about-us__services {
@@ -70,11 +72,14 @@ html {
 .about-us-services__services-container {
   display: grid;
   grid-template-columns: 1fr;
+  margin-top: 2rem;
 }
 
 .services-container__service-header {
   font-size: var(--font-2-2);
+  line-height: var(--line-150);
   text-align: center;
+  margin-top: 1.5rem;
 }
 
 .about-us__fleet {
