Change font size for the fleet container.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -458,6 +458,10 @@ html {
   .about-us-fleet_car-container {
     width: 50%;
   }
+
+  .about-us-fleet__baset-text {
+    font-size: var(--font-2-2);
+  }
 }
 .reservation {
   position: relative;
