--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -90,4 +90,8 @@
     .about-us-fleet_car-container {
         width: 50%;
     }
+
+    .about-us-fleet__baset-text {
+        font-size: var(--font-2-2);
+    }
 }
