--- a/src/css/main.css
+++ b/src/css/main.css
@@ -456,7 +456,17 @@ html {
   }
 
   .about-us-fleet_car-container {
+    min-height: 250px;
     width: 50%;
+    position: relative;
+  }
+
+  .about-us-fleet__car-img {
+    position: absolute;
+    right: 2rem;
+    bottom: -3rem;
+    width: 115%;
+    height: auto;
   }
 
   .about-us-fleet__baset-text {
