--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -88,7 +88,18 @@
     }
 
     .about-us-fleet_car-container {
+        min-height: 250px;
         width: 50%;
+        position: relative;
+    }
+
+    .about-us-fleet__car-img {
+        position: absolute;
+        right: 2rem;
+        bottom: -3rem;
+        // top: 1rem;
+        width: 115%;
+        height: auto;
     }
 
     .about-us-fleet__baset-text {
