--- a/src/css/main.css
+++ b/src/css/main.css
@@ -463,7 +463,7 @@ html {
 
   .about-us-fleet__car-img {
     position: absolute;
-    right: 2rem;
+    right: 4rem;
     bottom: -3rem;
     width: 115%;
     height: auto;
@@ -471,6 +471,7 @@ html {
 
   .about-us-fleet__baset-text {
     font-size: var(--font-2-2);
+    padding-right: 17rem;
   }
 }
 .reservation {
