--- a/src/css/pages/AboutUs.css
+++ b/src/css/pages/AboutUs.css
@@ -134,7 +134,7 @@ html {
 
   .about-us-fleet__car-img {
     position: absolute;
-    right: 2rem;
+    right: 4rem;
     bottom: -3rem;
     width: 115%;
     height: auto;
@@ -142,6 +142,7 @@ html {
 
   .about-us-fleet__baset-text {
     font-size: var(--font-2-2);
+    padding-right: 17rem;
   }
 }
 
