--- a/src/css/pages/AboutUs.scss
+++ b/src/css/pages/AboutUs.scss
@@ -95,7 +95,7 @@
 
     .about-us-fleet__car-img {
         position: absolute;
-        right: 2rem;
+        right: 4rem;
         bottom: -3rem;
         // top: 1rem;
         width: 115%;
@@ -104,5 +104,22 @@
 
     .about-us-fleet__baset-text {
         font-size: var(--font-2-2);
+        padding-right: 17rem;
     }
+
+    // .about-us-fleet_car-container {
+    //     width: 50%;
+    // }
+
+    // .about-us-fleet__car-img {
+    //     width: 110%;
+    //     height: auto;
+    //     margin-left: -4rem;
+    //     // padding-left: 4rem;
+    // }
+
+    // .about-us-fleet__baset-text {
+    //     font-size: var(--font-2-2);
+    //     padding-right: 4rem;
+    // }
 }
