--- a/src/css/components/ReservationForm.scss
+++ b/src/css/components/ReservationForm.scss
@@ -10,6 +10,14 @@
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
+.reservation-form__step-one {
+    display: block;
+}
+
+.reservation-form__step-two {
+    display: none;
+}
+
 .reservation-form__triangle {
     display: none;
     position: absolute;
