Continue working on TalkingCar bug.

--- a/src/css/components/ReservationForm.css
+++ b/src/css/components/ReservationForm.css
@@ -1,3 +1,25 @@
+.reservation-form {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+  max-width: 1280px;
+}
 
+.step-one__car-photo-container {
+  display: none;
+}
+
+@media only screen and (min-width: 1024px) {
+  .reservation-form {
+    position: absolute;
+    top: 25vh;
+    width: 67%;
+  }
+
+  .step-one__car-photo-container {
+    display: block;
+    width: 100%;
+  }
+}
 
 /*# sourceMappingURL=ReservationForm.css.map */
