--- a/src/css/components/TalkingCar.scss
+++ b/src/css/components/TalkingCar.scss
@@ -1,33 +1,33 @@
-// .top__floating-container {
-//     display: grid;
-//     grid-template-columns: 1fr;
-//     // display: flex;
-//     // flex-direction: column;
-//     // align-items: flex-start;
-//     width: 100%;
-//     max-width: 1280px;
-// }
+.top__floating-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    // display: flex;
+    flex-direction: column;
+    // align-items: flex-start;
+    width: 100%;
+    max-width: 1280px;
+}
 
-// .top__car-photo-container {
-//     display: none;
-//     // width: 500px;
-//     // margin-left: 50px;
-// }
+.top__car-photo-container {
+    display: none;
+    // width: 500px;
+    // margin-left: 50px;
+}
 
-// @media only screen and (min-width: 1024px) {
-//     .top__floating-container {
-//         position: absolute;
-//         top: 25vh;
-//         grid-template-columns: 1fr 1.5fr;
-//         grid-gap: 50px;
-//         // flex-direction: row;
-//         // justify-content: space-between;
-//         width: 67%;
-//     }
+@media only screen and (min-width: 1024px) {
+    .top__floating-container {
+        position: absolute;
+        top: 25vh;
+        grid-template-columns: 1fr 1.5fr;
+        grid-gap: 50px;
+        // flex-direction: row;
+        // justify-content: space-between;
+        width: 67%;
+    }
 
-//     .top__car-photo-container {
-//         display: block;
-//         width: 100%;
-//         // margin-left: 50px;
-//     }
-// }
+    .top__car-photo-container {
+        display: block;
+        width: 100%;
+        // margin-left: 50px;
+    }
+}
