--- a/src/css/main.css
+++ b/src/css/main.css
@@ -688,11 +688,8 @@ html {
 }
 @media only screen and (min-width: 1024px) {
   .reservation-form__step-one {
-    position: absolute;
-    top: 25vh;
     grid-template-columns: 1fr 1.5fr;
     grid-gap: 50px;
-    width: 67%;
   }
 
   .step-one__car-photo-container {
@@ -857,6 +854,55 @@ html {
   .top {
     height: 60vh;
     background-image: url("../images/bg.jpg");
+  }
+}
+.top__floating-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1280px;
+}
+
+.top__car-photo-container {
+  display: none;
+}
+
+@media only screen and (min-width: 1024px) {
+  .top__floating-container {
+    position: absolute;
+    top: 25vh;
+    grid-template-columns: 1fr 1.5fr;
+    grid-gap: 50px;
+    width: 67%;
+  }
+
+  .top__car-photo-container {
+    display: block;
+    width: 100%;
+  }
+}
+.reservation-form {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+  max-width: 1280px;
+}
+
+.step-one__car-photo-container {
+  display: none;
+}
+
+@media only screen and (min-width: 1024px) {
+  .reservation-form {
+    position: absolute;
+    top: 25vh;
+    width: 67%;
+  }
+
+  .step-one__car-photo-container {
+    display: block;
+    width: 100%;
   }
 }
 .home-content__outside-mission-container {
