--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -96,13 +96,13 @@
 
 @media only screen and (min-width: 1024px) {
     .reservation-form__step-one {
-        position: absolute;
-        top: 25vh;
+        // position: absolute;
+        // top: 25vh;
         grid-template-columns: 1fr 1.5fr;
         grid-gap: 50px;
         // flex-direction: row;
         // justify-content: space-between;
-        width: 67%;
+        // width: 67%;
     }
 
     .step-one__car-photo-container {
