Do sCreate scss file for StepTwo.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,7 @@
 @import 'reservation-form/StepOne';
 @import 'components/NavBar';
 @import 'components/Top';
-@import 'components/TalkingCar';
 @import 'components/ReservationForm';
 @import 'components/Mission';
 @import 'components/Footer';
+// @import 'components/TalkingCar';
