Work on StepTwo.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,6 +6,7 @@
 @import 'pages/Reservation';
 @import 'pages/ContactUs';
 @import 'reservation-form/StepOne';
+@import 'reservation-form/StepTwo';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
