--- a/src/css/reservation-form/StepTwo.css
+++ b/src/css/reservation-form/StepTwo.css
@@ -1,6 +1,7 @@
 .reservation-form__step-two {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .step-two__form {
   display: flex;
@@ -9,31 +10,40 @@
   position: relative;
   padding: 16px;
   background-color: var(--color-white);
-  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
+}
 
 .step-two__locations {
   font-size: var(--font-2-2);
-  padding-bottom: 1rem; }
+  padding-bottom: 1rem;
+}
 
 .step-two__locations-text--red {
-  color: var(--color-red); }
+  color: var(--color-red);
+}
 
 .step-two__trip-cost-container {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
 .step-two__info {
   font-size: var(--font-2);
-  margin-right: 1rem; }
+  margin-right: 1rem;
+}
 
 .step-two__dollar-sign {
-  font-size: var(--font-1-8); }
+  font-size: var(--font-1-8);
+}
 
 .step-two__cost {
-  font-size: var(--font-3-2); }
+  font-size: var(--font-3-2);
+}
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-two {
-    flex-direction: row; } }
+    flex-direction: row;
+  }
+}
 
 /*# sourceMappingURL=StepTwo.css.map */
