--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,6 +7,7 @@
 @import 'pages/ContactUs';
 @import 'reservation-form/StepOne';
 @import 'reservation-form/StepTwo';
+@import 'reservation-form/StepThree';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
