--- a/src/components/ReservationFormTest/styles.css
+++ b/src/components/ReservationFormTest/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 * {
   font-family: "Montserrat", sans-serif;
@@ -36,4 +36,4 @@ button {
   max-width: 400px;
   height: auto;
   margin-bottom: -40px;
-}
+} */
