--- a/src/css/pages/Home.css
+++ b/src/css/pages/Home.css
@@ -3,32 +3,38 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .home__home-content {
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .home-content__outside-welcome-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+}
 
 .home-content__welcome-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .welcome-container__general-info {
   padding: 16px;
   font-size: var(--font-22);
-  line-height: var(--line-150); }
+  line-height: var(--line-150);
+}
 
 .welcome-content-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .welcome-content-container__content {
   display: flex;
@@ -38,49 +44,61 @@
   font-size: var(--font-22);
   line-height: var(--line-150);
   border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px; }
+  border-bottom-left-radius: 6px;
+}
 
 .welcome-content-container__header {
   font-size: var(--font-3-2);
-  color: var(--color-white); }
+  color: var(--color-white);
+}
 
 .welcome-content-container__wheel-chair-transfer-text {
   margin-top: 40px;
   font-size: var(--font-2-2);
-  line-height: var(--line-150); }
+  line-height: var(--line-150);
+}
 
 .welcome-content-container__prices {
   font-size: var(--font-2-2);
   line-height: var(--line-150);
-  color: var(--color-white); }
+  color: var(--color-white);
+}
 
 .welcome-content-container__prices--black {
-  color: var(--color-black); }
+  color: var(--color-black);
+}
 
 .welcome-content-container__reduced-prices {
   font-size: var(--font-1-3);
-  margin-top: 2rem; }
+  margin-top: 2rem;
+}
 
 @media only screen and (min-width: 1024px) {
   .home-content__welcome-container {
     width: 67%;
     max-width: 1280px;
     padding-top: 14rem;
-    padding-bottom: 8rem; }
+    padding-bottom: 8rem;
+  }
 
   .welcome-container__general-info {
     padding: 0;
     margin-bottom: 6rem;
-    font-size: var(--font-2-2); }
+    font-size: var(--font-2-2);
+  }
 
   .welcome-content-container {
     width: 100%;
-    flex-direction: row; }
+    flex-direction: row;
+  }
 
   .welcome-content-container__content {
-    width: 50%; }
+    width: 50%;
+  }
 
   .welcome-content-container__map-container {
-    width: 50%; } }
+    width: 50%;
+  }
+}
 
 /*# sourceMappingURL=Home.css.map */
