Make input field work onChange.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -497,7 +497,9 @@ html {
 
 .contact-submit-btn__text {
   font-size: var(--font-2-6);
-  color: var(--color-white); }
+  color: var(--color-white);
+  border: none;
+  background-color: transparent; }
 
 @media only screen and (min-width: 1024px) {
   .contact-us__contact-us-content {
