--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -9,6 +9,7 @@
 .step-three__reservation-date-picker-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
   grid-template-areas: 'date-left date-right' 'time-left time-right' 'submit-left submit-right'; }
 
 .reservation-date-picker-container__reservation-date-picker {
@@ -16,10 +17,13 @@
 
 .reservation-date-picker-container__reservation-time-picker {
   grid-area: time-left;
-  display: flex; }
+  display: flex;
+  align-items: center; }
 
 .reservation-date-picker-container__reservation-am-pm-picker {
-  grid-area: time-right; }
+  grid-area: time-right;
+  display: flex;
+  align-items: center; }
 
 .reservation-form__submit-btn--step-three {
   grid-area: submit-right; }
