--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -3,6 +3,14 @@
   flex-direction: column;
   background-color: var(--color-white); }
 
+.step-three__step-three-container {
+  padding: 1.6rem; }
+
+.step-three__step-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
 .step-three__header {
   font-size: 2.5rem; }
 
@@ -17,13 +25,18 @@
 
 .reservation-date-picker-container__reservation-time-picker {
   grid-area: time-left;
-  display: flex;
-  align-items: center; }
+  display: grid;
+  grid-template-columns: 4fr 1fr 4fr;
+  align-items: center;
+  justify-items: center;
+  font-size: var(--font-1-6); }
 
 .reservation-date-picker-container__reservation-am-pm-picker {
   grid-area: time-right;
   display: flex;
-  align-items: center; }
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 2.5rem; }
 
 .reservation-form__submit-btn--step-three {
   grid-area: submit-right; }
