--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -4,6 +4,16 @@
     background-color: var(--color-white);
 }
 
+.step-three__step-three-container {
+    padding: 1.6rem;
+}
+
+.step-three__step-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .step-three__header {
     font-size: 2.5rem;
 }
@@ -31,14 +41,19 @@
 
 .reservation-date-picker-container__reservation-time-picker {
     grid-area: time-left;
-    display: flex;
+    display: grid;
+    grid-template-columns: 4fr 1fr 4fr;
     align-items: center;
+    justify-items: center;
+    font-size: var(--font-1-6);
 }
 
 .reservation-date-picker-container__reservation-am-pm-picker {
     grid-area: time-right;
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
+    font-size: 2.5rem;
 }
 
 .reservation-form__submit-btn--step-three {
