--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,6 +8,7 @@
 @import 'reservation-form/StepOne';
 @import 'reservation-form/StepTwo';
 @import 'reservation-form/StepThree';
+@import 'reservation-form/StepFour';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
