--- a/src/css/reservation-form/StepFour.css
+++ b/src/css/reservation-form/StepFour.css
@@ -1,12 +1,20 @@
 .reservation-form__step-four {
-  background-color: var(--color-white); }
+  display: flex;
+  flex-direction: column; }
+
+.reservation-form__inner-container {
+  padding: 1.6rem;
+  background-color: var(--color-white);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px; }
 
 .step-four__step-four-header {
   display: flex;
   justify-content: space-between; }
 
 .step-four__step-four-form {
-  display: flex; }
+  display: flex;
+  flex-direction: column; }
 
 .step-four__pickup-container {
   width: 100%;
@@ -18,7 +26,15 @@
   display: flex;
   flex-direction: column; }
 
+.step-four__step-four-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
 @media only screen and (min-width: 768px) {
+  .step-four__step-four-form {
+    flex-direction: row; }
+
   .step-four__pickup-container {
     width: 50%; }
 
