--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,6 +9,7 @@
 @import 'reservation-form/StepTwo';
 @import 'reservation-form/StepThree';
 @import 'reservation-form/StepFour';
+@import 'reservation-form/StepFive';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
