--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -12,7 +12,7 @@
   align-items: center; }
 
 .step-three__header {
-  font-size: 2.5rem; }
+  font-size: var(--font-2-6); }
 
 .step-three__reservation-date-picker-container {
   display: grid;
