--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -15,7 +15,7 @@
 }
 
 .step-three__header {
-    font-size: 2.5rem;
+    font-size: var(--font-2-6);
 }
 
 .step-three__reservation-date-picker-container {
