--- a/src/css/main.css
+++ b/src/css/main.css
@@ -765,8 +765,8 @@ html {
   font-size: var(--font-2-6); }
 
 .step-five__step-five-form {
-  display: flex;
-  flex-direction: column; }
+  display: grid;
+  grid-template-columns: 1fr; }
 
 .step-five__pickup-container {
   width: 100%;
@@ -785,7 +785,7 @@ html {
 
 @media only screen and (min-width: 768px) {
   .step-five__step-five-form {
-    flex-direction: row; }
+    grid-template-columns: 1fr 1fr; }
 
   .step-five__pickup-container {
     width: 50%; }
