--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -20,8 +20,8 @@
 }
 
 .step-five__step-five-form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .step-five__pickup-container {
@@ -44,7 +44,7 @@
 
 @media only screen and (min-width: 768px) {
     .step-five__step-five-form {
-        flex-direction: row;
+        grid-template-columns: 1fr 1fr;
     }
 
     .step-five__pickup-container {
