Work on StepFive: layout input fields, change flex to grid for additional info container.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -778,6 +778,12 @@ html {
   display: flex;
   flex-direction: column; }
 
+.step-five__additional-info {
+  display: grid; }
+
+.step-five__additional-info-form-group {
+  display: flex; }
+
 .step-five__step-five-footer {
   display: flex;
   justify-content: space-between;
@@ -787,11 +793,9 @@ html {
   .step-five__step-five-form {
     grid-template-columns: 1fr 1fr; }
 
-  .step-five__pickup-container {
-    width: 50%; }
-
-  .step-five__dropoff-container {
-    width: 50%; } }
+  .step-five__additional-info {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem; } }
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
