--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,6 +10,7 @@
 @import 'reservation-form/StepThree';
 @import 'reservation-form/StepFour';
 @import 'reservation-form/StepFive';
+@import 'reservation-form/StepFive';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
