Start working on StepSeven.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,9 +11,9 @@
 @import 'reservation-form/StepFour';
 @import 'reservation-form/StepFive';
 @import 'reservation-form/StepSix';
+@import 'reservation-form/StepSeven';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
 @import 'components/Mission';
 @import 'components/Footer';
-// @import 'components/TalkingCar';
