--- a/src/css/main.css
+++ b/src/css/main.css
@@ -846,6 +846,25 @@ html {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem; } }
+.reservation-form__step-seven {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-white); }
+
+.step-seven__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  padding: 16px;
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
+
+.step-seven__thank-you-text {
+  font-size: var(--font-32); }
+
+@media only screen and (min-width: 768px) {
+  .reservation-form__step-seven {
+    flex-direction: row; } }
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
