--- a/src/css/reservation-form/StepSeven.css
+++ b/src/css/reservation-form/StepSeven.css
@@ -16,6 +16,7 @@
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-seven {
-    flex-direction: row; } }
+    flex-direction: row;
+    border-radius: 6px; } }
 
 /*# sourceMappingURL=StepSeven.css.map */
