--- a/src/css/reservation-form/StepFive.css
+++ b/src/css/reservation-form/StepFive.css
@@ -41,6 +41,9 @@
   align-items: center; }
 
 @media only screen and (min-width: 768px) {
+  .reservation-form__step-five {
+    border-radius: 6px; }
+
   .step-five__step-five-form {
     grid-template-columns: 1fr 1fr; }
 
