--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -51,6 +51,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+    .reservation-form__step-five {
+        border-radius: 6px;
+    }
+    
     .step-five__step-five-form {
         grid-template-columns: 1fr 1fr;
     }
