--- a/src/css/reservation-form/StepSeven.scss
+++ b/src/css/reservation-form/StepSeven.scss
@@ -22,5 +22,6 @@
 @media only screen and (min-width: 768px) {
     .reservation-form__step-seven {
         flex-direction: row;
+        border-radius: 6px;
     }
 }
