--- a/src/css/reservation-form/StepSix.css
+++ b/src/css/reservation-form/StepSix.css
@@ -44,6 +44,9 @@
   align-items: center; }
 
 @media only screen and (min-width: 768px) {
+  .reservation-form__step-six {
+    border-radius: 6px; }
+
   .step-six__step-six-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
