--- a/src/css/reservation-form/StepSix.scss
+++ b/src/css/reservation-form/StepSix.scss
@@ -56,6 +56,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+    .reservation-form__step-six {
+        border-radius: 6px;
+    }
+
     .step-six__step-six-content {
         display: grid;
         grid-template-columns: 1fr 1fr;
