--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -63,5 +63,6 @@
 @media only screen and (min-width: 768px) {
     .reservation-form__step-three {
         flex-direction: row;
+        border-radius: 6px;
     }
 }
