--- a/src/css/reservation-form/StepTwo.scss
+++ b/src/css/reservation-form/StepTwo.scss
@@ -45,5 +45,6 @@
 @media only screen and (min-width: 768px) {
     .reservation-form__step-two {
         flex-direction: row;
+        border-radius: 6px;
     }
 }
